:sparkles: refactor UserSecurity instantiation to use builder pattern and update JwtToUserAuthenticationConverter